fix score board size on mobile

--- a/src/app/board/board.component.css
+++ b/src/app/board/board.component.css
@@ -30,6 +30,10 @@
   text-align: center;
 }
 
-app-score-board {
+.fullSize {
+  width: 100%;
+}
+
+.middleSize {
   width: 50%;
 }
